# TrailHost

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: lib.rs  main.rs
backend/src/auth/: handlers.rs  jwt.rs  mod.rs  models.rs
backend/src/db/: mod.rs
backend/src/history/: handlers.rs  mod.rs  models.rs
backend/src/ws/: mod.rs
backend/tests/: api.rs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: extension.ts
e2e/tests/: auth-page.spec.ts  history-page.spec.ts  popup.spec.ts
extension/: index.html  manifest.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
extension/src/__tests__/: auth-page.test.tsx  client.test.ts  history-page.test.tsx  popup.test.tsx  setup.ts
extension/src/api/: client.ts
extension/src/auth-page/: App.tsx  index.html  style.css
extension/src/background/: index.ts
extension/src/history-page/: App.tsx  index.html  style.css
extension/src/popup/: App.tsx  index.html  style.css
